[gd_scene load_steps=10 format=3 uid="uid://wmf2eu0uuhrg"]

[ext_resource type="Script" path="res://addons/third-person-camera/third_person_camera/ThirdPersonCamera.gd" id="1_telmq"]
[ext_resource type="Script" path="res://addons/third-person-camera/third_person_camera/CameraShakePreset.gd" id="2_436kf"]
[ext_resource type="Resource" uid="uid://8wq0le7mywh4" path="res://addons/third-person-camera/third_person_camera/camera-shake-presets/DefaultCameraShakePreset.tres" id="2_idc07"]
[ext_resource type="Script" path="res://addons/third-person-camera/third_person_camera/CameraShake.gd" id="2_y3uk4"]
[ext_resource type="Resource" uid="uid://cn4iinuc23o7j" path="res://addons/third-person-camera/third_person_camera/camera-shake-presets/GentleSway.tres" id="3_iflr8"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_84uqy"]
margin = 1.135

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2bjii"]
albedo_color = Color(0.8, 0.686275, 0.215686, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ag7lb"]
material = SubResource("StandardMaterial3D_2bjii")
radius = 0.05
height = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_ybkhn"]
top_radius = 0.0
height = 0.938

[node name="ThirdPersonCamera" type="Node3D"]
script = ExtResource("1_telmq")
shake_presets = Array[ExtResource("2_436kf")]([ExtResource("2_idc07"), ExtResource("3_iflr8")])

[node name="RotationPivot" type="Node3D" parent="."]
transform = Transform3D(0.999983, 0, 0, 0, 0.939717, 0.34194, 0, -0.34195, 0.939691, 0, 0, 0)
top_level = true

[node name="OffsetPivot" type="Node3D" parent="RotationPivot"]
transform = Transform3D(1.00011, 1.43424e-07, 2.92435e-07, -7.83479e-07, 1.00002, 5.75781e-05, -5.18048e-06, -6.30915e-05, 1.00004, 0, 0, 0)

[node name="CameraSpringArm" type="SpringArm3D" parent="RotationPivot/OffsetPivot"]
process_priority = 11
shape = SubResource("SeparationRayShape3D_84uqy")
spring_length = 10.0

[node name="CameraMarker" type="Marker3D" parent="RotationPivot/OffsetPivot/CameraSpringArm"]
transform = Transform3D(0.999944, -2.36467e-06, -7.01276e-06, 1.45123e-06, 1.00043, 0.000262648, 3.92101e-06, 7.18236e-06, 1.00148, -2.92405e-06, 0.000167608, 9.99994)

[node name="PivotDebug" type="MeshInstance3D" parent="RotationPivot/OffsetPivot"]
visible = false
mesh = SubResource("SphereMesh_ag7lb")

[node name="CameraShaker" type="Node3D" parent="." node_paths=PackedStringArray("camera")]
script = ExtResource("2_y3uk4")
camera = NodePath("../Camera")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 8.82673e-17, -2.42512e-16, 0, 0.939693, 0.34202, 2.58076e-16, -0.34202, 0.939693, -2.42512e-15, 3.4202, 9.39692)
top_level = true

[node name="CameraDebug" type="MeshInstance3D" parent="Camera"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.570638)
visible = false
mesh = SubResource("CylinderMesh_ybkhn")
